--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.78.0",
+    "@vercel/kv": "^3.0.0",
     "framer-motion": "^12.34.3",
     "next": "16.1.6",
     "openai": "^6.25.0",
